--- a/templates/base.html
+++ b/templates/base.html
@@ -19,11 +19,11 @@
         <nav class="nav-extended">
             <div class="nav-wrapper">
               <a href="{{ url_for('home') }}" class="brand-logo">Home</a>
-              <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-              <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <a href="#" data-target="mobile-demo" class="sidenav-trigger left"><i class="fas fa-bars"></i></a>
+              <ul class="right left hide-on-med-and-down">
                 <li><a href="{{ url_for('recipes') }}">Recipes</a></li>
                 <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-                <li><a href="collapsible.html">JavaScript</a></li>
+                <li><a href="#">Log In</a></li>
               </ul>
             </div>
           </nav>
