Add image functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,8 @@
       <!-- mobile sidenav -->
 
           <ul id="mobile-demo" class="sidenav">
-              <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-              <li><a href="#!">Second Link</a></li>
+            <li><a href="{{ url_for('recipes') }}">Recipes</a></li>
+            <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
           </ul>
     </header>
 
