--- a/templates/desserts.html
+++ b/templates/desserts.html
@@ -1,11 +1,35 @@
 {% extends "base.html" %}
 {% block content %}
 
-  <div class="row">
-    <a href="{{ url_for('recipes') }}" class="col s12 btn-large">
-      Back to recipes
-    </a>
-  </div>
+
+      <h1 class="center-align">Desserts</h1>
+                  
+      <ul class="collapsible">
+        {% for recipe in recipes %}
+          {% if recipe.course_category == "Dessert" %}   
+              <li>
+                <div class="collapsible-header">
+                    <i class="material-icons"></i>
+                    <strong>{{ recipe.recipe_name }}</strong>
+                </div>
+                <div class="collapsible-body">
+                    <p><strong>Preparation Time</strong> : {{ recipe.prep_time }}</p>
+                    <ul>
+                      <li>
+                          <p><strong>Ingredients</strong> : {{ recipe.ingredients }}</p>
+                      </li>
+                    </ul>
+                </div>
+              </li>
+            {% endif %}
+        {% endfor %}
+      </ul>
+
+      <div class="row">
+        <a href="{{ url_for('recipes') }}" class="col s12 btn-large">
+          Back to recipes
+        </a>
+      </div>
 
 
 {% endblock %}
