--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -3,7 +3,7 @@
 
     <h1 class="center-align">Add Recipe</h1>
 
-    <div class="row">
+    <div class="row recipeForm">
         <!-- Add recipe form -->
 
         <div class="row card-panel grey lighten-5">
@@ -21,7 +21,7 @@
                         <label for="recipe_category">Recipe Category</label>
                     </div>
                 </div>
-                <!-- task name -->
+                <!-- task name
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="fas fa-pencil-alt prefix light-blue-text text-darken-4"></i>
@@ -29,56 +29,117 @@
                             type="text" class="validate" required>
                         <label for="recipe_name">Recipe Name</label>
                     </div>
-                </div>
+                </div> -->
                 <!-- recipe ingredients -->
-                <div class="row">
+                <!-- <div class="row">
                     <div class="input-field col s12">
-                        <i class="fas fa-align-left prefix light-blue-text text-darken-4"></i>
-                        <textarea id="recipe_ingredients" name="recipe_ingredients" minlength="5"
-                            maxlength="200" class="materialize-textarea validate" required></textarea>
-                        <label for="recipe_ingredients">Recipe Ingredients</label>
-                    </div>
-                        <!--  Upload Image  -->
-                <div class="row"> 
-                    <div class="col s6"> 
-                            <h3 class="center-align">Select an image to upload</h3>
-                            <p>
-                                {% with messages = get_flashed_messages() %}
-                                {% if messages %}
-                                    <ul>
-                                    {% for message in messages %}
-                                    <li>{{ message }}</li>
-                                    {% endfor %}
-                                    </ul>
-                                {% endif %}
-                                {% endwith %}
-                            </p>
-                                
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col s6">
-                        <div class="image-preview center-align" id="imagePreview">
-                            <img src="" alt="Image Preview" class="image-preview__image ">
-                            <span class="imagepreview__default-text">Image Preview</span>
-                        </div>
-                    </div>
-                    <div class="col s6">
-                        <form method="post" action="/" enctype="multipart/form-data">
-                            <dl>
-                                <p>
-                                    <input type="file" name="file" id="file" autocomplete="off" required>
-                                </p>
-                            </dl>
-                            <p>
-                                <input type="submit" value="Submit">
-                            </p>
-                        </form>
-                    </div>
-                </div>
+                            Dropdown Trigger
+                            <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Drop Me!</a>
 
+                            Dropdown Structure
+                            <ul id='dropdown1' class='dropdown-content'>
+                            <li><a href="#!">one</a></li>
+                            <li><a href="#!">two</a></li>
+                            <li class="divider" tabindex="-1"></li>
+                            <li><a href="#!">three</a></li>
+                            <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
+                            <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+                            </ul>
+                    </div> -->
+
+
+                    <div class="form-wrapper">
+                        <form post="#">
+                          <div class="row">
+                            <div class="form-col">
+                              <div class="form__item">
+                                <label class="recipe__name" for="recipe-name">Recipe Name<i class="red">( max length 200 )</i></label>
+                                <br>
+                                <input name="recipe-name"/>
+                              </div>
+                              <div class="form__item">
+                                <label for="short-desc">Short Description</label>
+                                <br>
+                                <textarea name="short-desc" cols="30" rows="5"></textarea>
+                              </div>
+                              <div class="form__item">
+                                <label for="ing-list">Ingredients</label>
+                                <br>
+                                <textarea name="ing-list" cols="30" rows="10"></textarea>
+                              </div>
+                            </div>
+                            <div class="form-col">
+                              <div class="row">
+                                <div class="form__item">
+                                  <label class="recipe__time" for="prep_time">Prep Time</label>
+                                  <br>
+                                  <input class="time__input" type="text"/>
+                                </div>
+                                <div class="form__item">
+                                  <label class="recipe__time">Cooking Time</label>
+                                  <br>
+                                  <input class="time__input" type="text"/>
+                                </div>
+                                <div class="form__item">
+                                  <label class="recipe__time" for="servings">Servings</label>
+                                  <br>
+                                  <input class="time__input" for="servings" type="text"/>
+                                </div>
+                              </div>
+                              <div class="form__item">
+                                <label for="direction">Directions</label>
+                                <br>
+                                <textarea name="direction" rows="10"></textarea>
+                              </div>
+                              <div class="form__item">
+                                <label for="cook-tips">Cooking Tips</label>
+                                <br>
+                                <textarea name="cook-tips" rows="5"></textarea>
+                              </div>
+                            </div>
+                          </div>
+                        </form>
+                      </div>
+        </div>
+    </div>
+    <div class="row">
+        <!--  Upload Image  -->
+        <div class="row"> 
+            <div class="col s12"> 
+                    <h3 class="center-align">Select an image to upload</h3>
+                    <p>
+                        {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            <ul>
+                            {% for message in messages %}
+                            <li>{{ message }}</li>
+                            {% endfor %}
+                            </ul>
+                        {% endif %}
+                        {% endwith %}
+                    </p>
+                        
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12">
+                <div class="image-preview center-align" id="imagePreview">
+                    <img src="" alt="Image Preview" class="image-preview__image ">
+                    <span class="imagepreview__default-text">Image Preview</span>
                 </div>
-                </div>
+            </div>
+            <div class="col s6">
+                <form method="post" action="/" enctype="multipart/form-data">
+                    <dl>
+                        <p>
+                            <input type="file" name="file" id="file" autocomplete="off" required>
+                        </p>
+                    </dl>
+                </form>
+            </div>
+        </div>
+
+    </div>
                 <!-- submit button -->
                 <div class="row">
                     <div class="col s12 center-align">
