--- a/templates/maincourses.html
+++ b/templates/maincourses.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-            
-      <h1>Main Courses</h1>
 
+      <h1 class="center-align">Main Courses</h1>
+                  
       <ul class="collapsible">
         {% for recipe in recipes %}
           {% if recipe.course_category == "Main Course" %}   
@@ -12,11 +12,10 @@
                     <strong>{{ recipe.recipe_name }}</strong>
                 </div>
                 <div class="collapsible-body">
-                    <p><strong>Preparation Time</strong> : {{ recipe.prep_time }}</p><br>
-                    <p><strong>Ingredients</strong> :
+                    <p><strong>Preparation Time</strong> : {{ recipe.prep_time }}</p>
                     <ul>
                       <li>
-                          <p>{{ recipe.ingredients }}</p>
+                          <p><strong>Ingredients</strong> : {{ recipe.ingredients }}</p>
                       </li>
                     </ul>
                 </div>
@@ -30,6 +29,5 @@
           Back to recipes
         </a>
       </div>
-  
 
 {% endblock %}
