--- a/templates/starters.html
+++ b/templates/starters.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
+      <h1 class="center-align">Starters</h1>
             
       <ul class="collapsible">
         {% for recipe in recipes %}
@@ -14,7 +15,7 @@
                     <p><strong>Preparation Time</strong> : {{ recipe.prep_time }}</p>
                     <ul>
                       <li>
-                          <p>{{ recipe.ingredients }}</p>
+                          <p><strong>Ingredients</strong> : {{ recipe.ingredients }}</p>
                       </li>
                     </ul>
                 </div>
