Add register page form and page

--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -92,15 +92,19 @@
                                     <textarea name="ing-list" cols="30" rows="10"></textarea>
                                 </div>
                                 </div>
+                                <div class="row">
                                 <div class="form__item">
                                     <label for="direction">Directions</label>
                                     <br>
                                     <textarea name="direction" rows="10"></textarea>
                                 </div>
+                                </div>
+                                <div class="row">
                                 <div class="form__item">
                                     <label for="cook-tips">Cooking Tips</label>
                                     <br>
                                     <textarea name="cook-tips" rows="5"></textarea>
+                                </div>
                                 </div>
                         </form>
                     </div>
