--- a/templates/register.html
+++ b/templates/register.html
@@ -15,23 +15,29 @@
                             <!-- username -->
                                 <div class="input-field col s12">
                                   <i class="fas fa-user-plus prefix"></i>
-                                  <input id="username" name="username" type="text" class="materialize-textarea"></textarea>
+                                  <input id="username" name="username" type="text" 
+                                        minlength="5" maxlength="15" 
+                                        pattern="^[a-z,A-Z,0-9]{5,15}$" class="validate" required>
                                   <label for="username">Username</label>
                                 </div>
                           </div>
+                            <!-- email -->
+                        <div class="row">
+                            <div class="input-field col s12">
+                                <i class="fas fa-at prefix"></i>
+                                <input id="email" name="email" type="email" 
+                                    class="validate" required>
+                                <label for="email">Email</label>
+                            </div>
+                        </div>
                           <!-- password -->
                         <div class="row">
                             <div class="input-field col s12">
                                 <i class="fas fa-user-lock prefix"></i>
-                                <input id="password" name="password" type="password" class="validate">
+                                <input id="password" name="password" type="password" 
+                                    minlength="5" maxlength="15" class="validate" 
+                                    pattern="^[a-z,A-Z,0-9]{5,15}$" required>
                                 <label for="password">Password</label>
-                            </div>
-                        </div>
-                        <!-- email -->
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="email" name="email" type="email" class="validate">
-                                <label for="email">Email</label>
                             </div>
                         </div>
                         <!-- submit -->
