Add register functionality, profile redirection, login functionality

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,10 @@
+.flashes {
+  line-height: 2px;
+  display: block !important;
+}
+
+
+
 .image-preview {
     width: 300px;
     min-height: 100px;
