--- a/templates/base.html
+++ b/templates/base.html
@@ -26,14 +26,18 @@
       <!-- main navbar -->
         <nav class="nav-extended">
             <div class="nav-wrapper">
-              <a href="{{ url_for('home') }}" class="brand-logo">Home</a>
+              <a href="{{ url_for('home') }}" class="brand-logo">Duncan's Delights</a>
               <a href="#" data-target="mobile-demo" class="sidenav-trigger left"><i class="fas fa-bars"></i></a>
               <ul class="right left hide-on-med-and-down">
                 <li><a href="{{ url_for('recipes') }}">Recipes</a></li>
-                <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-                <li><a href="{{ url_for('register') }}">Register</a></li>
-                <li><a href="{{ url_for('login') }}">Log In</a></li>
-                
+                {% if session.user %}
+                    <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
+                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                {% else %}
+                    <li><a href="{{ url_for('login') }}">Log In</a></li>
+                    <li><a href="{{ url_for('register') }}">Register</a></li>
+                {% endif %}
               </ul>
             </div>
           </nav>
@@ -41,10 +45,16 @@
       <!-- mobile sidenav -->
 
           <ul id="mobile-demo" class="sidenav">
+            <li><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="{{ url_for('recipes') }}">Recipes</a></li>
-            <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
-            <li><a href="{{ url_for('register') }}">Register</a></li>
-            <li><a href="{{ url_for('login') }}">Log In</a></li>
+            {% if session.user %}
+                <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
+                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+            {% else %}
+                <li><a href="{{ url_for('login') }}">Log In</a></li>
+                <li><a href="{{ url_for('register') }}">Register</a></li>
+            {% endif %}
           </ul>
     </header>
 
