--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -21,12 +21,18 @@
                                         <label for="course_category">Recipe Category</label>
                                     </div>
                                 </li>
+
+                                <!-- recipe name  -->
                                 <li class="row">
                                     <div class="input-field col s6">
+                                        <i class="fas fa-file-signature prefix"></i>
                                         <label for="recipe-name">Recipe Name</label>
                                         <input id="recipe-name" name="recipe-name" type="text" class="validate"/>
                                     </div>
+
+                                    <!-- prep time -->
                                     <div class="input-field col s3">
+                                        <i class="fas fa-stopwatch prefix"></i>
                                         <label for="prep_time">Prep Time</label>
                                         <input placeholder="e.g. 40" id="prep_time" name="prep_time" type="number" class="validate"/>
                                     </div>
@@ -35,14 +41,20 @@
                                     </div>
                                 </li>
                                 <li class="row">
+
+                                    <!-- cooking time -->
                                     <div class="input-field col s3">
+                                        <i class="fas fa-stopwatch prefix"></i>
                                         <label for="cooking_time">Cooking Time</label>
                                         <input placeholder="e.g. 120" id="cooking_time" name="cooking_time" type="number" class="validate"/>
                                     </div>
                                     <div class="input-field col s3">
                                         <p class="valign-wrapper">Minutes</p>
                                     </div>
+
+                                    <!-- servings -->
                                     <div class="input-field col s3">
+                                        <i class="fas fa-users prefix"></i>
                                         <label for="serves">Serves</label>
                                         <input placeholder="e.g. 3" name="serves" id="serves" type="number" class="validate"/>
                                     </div>
@@ -50,82 +62,78 @@
                                         <p class="valign-wrapper">People</p>
                                     </div>
                                 </li>
+
+                                <!-- short description  -->
                                 <li class="row">
                                     <div class="input-field col s12">
+                                        <i class="fas fa-pencil-alt prefix"></i>
                                         <label for="s_desc">Short Description</label>
                                         <textarea name="s_desc" id="s_desc" cols="30" rows="5" class="materialize-textarea validate"></textarea>
                                     </div>
                                 </li>
+
+                                <!-- ingredients -->
                                 <li class="row">
                                     <div class="input-field col s12">
+                                        <i class="fas fa-list prefix"></i>
                                         <label for="ingredients">Ingredients</label>
                                         <textarea name="ingredients" id="ingredients" cols="30" rows="10" class="materialize-textarea validate"></textarea>
                                     </div>
                                 </li>
+
+                                <!-- directions for use  -->
                                 <li class="row">
                                     <div class="input-field col s12">
+                                        <i class="fas fa-directions prefix"></i>
                                         <label for="directions">Directions</label>
                                         <textarea name="direction" id="directions" rows="10" class="materialize-textarea validate"></textarea>
                                     </div>
                                 </li>
+
+                                <!-- cooking tips -->
                                 <li class="row">
                                     <div class="input-field col s12">
+                                        <i class="fas fa-hands-helping prefix"></i>
                                         <label for="cook_tip">Cooking Tips</label>
                                         <textarea name="cook_tip" id="cook_tip" rows="5" class="materialize-textarea validate"></textarea>
                                     </div>
                                 </li>
+
+                                <!-- image header -->
                                 <li class="row"> 
                                     <div class="input-field col s12"> 
                                             <h3 class="center-align">Select an image to upload</h3>
                                     </div>
                                 </li>
-                                <li class="row">
-                                    <div class="input-field col s6">
-                                        <div class="image-preview center-align" id="imagePreview">
-                                            <img src="" alt="Image Preview" class="image-preview__image ">
-                                            <span class="imagepreview__default-text">Image Preview</span>
+
+                                <!-- image preview -->
+                                <!-- <li>
+                                    <div class="row">
+                                        <div class="col s12">
+                                            <div class="image-preview center-align" id="imagePreview">
+                                                <img src="" alt="Image Preview" class="image-preview__image ">
+                                                <span class="imagepreview__default-text">Image Preview</span>
+                                            </div>
+                                        </div> 
+
+                                         image file selection -->
+                                        <!-- <div class="col s6">
+                                            <form method="post" action="/" enctype="multipart/form-data">
+                                                <dl>
+                                                    <p>
+                                                        <input type="file" name="file" id="file" autocomplete="off" required>
+                                                    </p>
+                                                </dl>
+                                            </form>
                                         </div>
                                     </div>
-                                    <div class="input-field col s6">
-                                        <form method="post" action="/" enctype="multipart/form-data">
-                                            <div class="file-input-container">
-                                                <input type="file" name="file" id="file" autocomplete="off" required>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </li>
+                                </li> --> 
                             </ul>
 
                         </form>
                     </div>
         </div>
-    <div class="row">
-        <!--  Upload Image  -->
-        <div class="row"> 
-            <div class="col s12"> 
-                    <h3 class="center-align">Select an image to upload</h3>
-                        
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12">
-                <div class="image-preview center-align" id="imagePreview">
-                    <img src="" alt="Image Preview" class="image-preview__image ">
-                    <span class="imagepreview__default-text">Image Preview</span>
-                </div>
-            </div>
-            <div class="col s6">
-                <form method="post" action="/" enctype="multipart/form-data">
-                    <dl>
-                        <p>
-                            <input type="file" name="file" id="file" autocomplete="off" required>
-                        </p>
-                    </dl>
-                </form>
-            </div>
-        </div>
-
-    </div>
+    
                 <!-- submit button -->
                 <div class="row">
                     <div class="col s12 center-align">
