--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -4,15 +4,20 @@
       <h1 class="center-align">List of Recipes</h1>
 
       <div class="row">
-          <a href="{{ url_for('starters') }}" class="col s12 l4 btn-large">
-            Starters
+          <a href="{{ url_for('starters') }}" class="col s12 btn-large starter-btn">
+            <span class="rec-btn-text"> Starters </span>
           </a>
-          <a href="{{ url_for('mCourse') }}" class="col s12 l4 btn-large">
-            Main Courses
+      </div>
+      <div class="row">
+          <a href="{{ url_for('mCourse') }}" class="col s12 btn-large mcourse-btn">
+            <span class="rec-btn-text"> Main Courses </span>
           </a>
-          <a href="{{ url_for('dessert') }}" class="col s12 l4 btn-large">
-            Desserts
+      </div>
+      <div class="row">
+          <a href="{{ url_for('dessert') }}" class="col s12 btn-large dessert-btn">
+            <span class="rec-btn-text"> Desserts </span>
           </a>
+      </div>
 
           
 
