--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -9,7 +9,7 @@
                         <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
                             <ul>
                                 <!-- category selection -->
-                                <li class="row">
+                                <div class="row">
                                     <div class="input-field col s12">
                                         <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
                                         <select id="course_category" name="course_category" class="validate" required>
@@ -20,14 +20,14 @@
                                         </select>
                                         <label for="course_category">Recipe Category</label>
                                     </div>
-                                </li>
+                                </div>
 
                                 <!-- recipe name  -->
                                 <li class="row">
                                     <div class="input-field col s6">
                                         <i class="fas fa-file-signature prefix"></i>
-                                        <label for="recipe-name">Recipe Name</label>
-                                        <input id="recipe-name" name="recipe-name" type="text" class="validate"/>
+                                        <label for="recipe_name">Recipe Name</label>
+                                        <input id="recipe_name" name="recipe_name" type="text" class="validate"/>
                                     </div>
 
                                     <!-- prep time -->
@@ -86,7 +86,7 @@
                                     <div class="input-field col s12">
                                         <i class="fas fa-directions prefix"></i>
                                         <label for="directions">Directions</label>
-                                        <textarea name="direction" id="directions" rows="10" class="materialize-textarea validate"></textarea>
+                                        <textarea name="directions" id="directions" rows="10" class="materialize-textarea validate"></textarea>
                                     </div>
                                 </li>
 
@@ -130,19 +130,16 @@
                                 </li> --> 
                             </ul>
 
+                            <!-- submit button -->
+                            <div class="row">
+                                <div class="col s12 center-align">
+                                    <button type="submit" class="btn-large light-blue darken-1 text-shadow">
+                                        Add Recipe <i class="fas fa-plus-square right"></i>
+                                    </button>
+                                </div>
+                            </div>
                         </form>
                     </div>
-        </div>
-    
-                <!-- submit button -->
-                <div class="row">
-                    <div class="col s12 center-align">
-                        <button type="submit" class="btn-large light-blue darken-1 text-shadow">
-                            Add Recipe <i class="fas fa-plus-square right"></i>
-                        </button>
-                    </div>
-                </div>
-            </form>
         </div>
 
 {% endblock %}
