--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,4 +10,32 @@
             </div>
         </div>
 
+        <ul class="collapsible">
+            {% for recipe in recipes %}
+               {% if recipe.created_by == session["user"] %} 
+               <li>
+                <div class="collapsible-header">
+                    <i class="material-icons"></i>
+                    <strong>{{ recipe.recipe_name }}</strong>
+                </div>
+                <div class="collapsible-body">
+                    <p><strong>Preparation Time</strong> : {{ recipe.prep_time }} minutes</p>
+                    <p><strong>Cooking Time</strong> : {{ recipe.cooking_time }} minutes</p>
+                    <p><strong>Serves</strong> : {{ recipe.serves }} people</p>
+                    <p><strong>Short Description</strong> : {{ recipe.s_desc }}</p>
+                    <ul>
+                      <li>
+                          <p><strong>Ingredients</strong> : {{ recipe.ingredients }}</p>
+                      </li>
+                    </ul>
+                    <p><strong>Directions</strong> : {{ recipe.directions }}</p>
+                    <p><strong>Cooking Tips</strong> : {{ recipe.cook_tip }}</p>
+                    <p><strong>Created by</strong> : {{ recipe.created_by }}</p>
+                </div>
+              </li>
+               {% endif %}
+            {% endfor %}
+        </ul>
+
+
 {% endblock %}
